--- a/news.html
+++ b/news.html
@@ -8,7 +8,13 @@
     <title>Grace Hopper</title>
 </head>
 <body>
-    
+    <article>
+        <section>
+            <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, former Persident Barack Obama awarded her the Presidential Medal of Freedom.</p>
+            
+
+        </section>
+    </article>
 Grace Hopper Celebration 2019 https://ghc.anitab.org/
 Born with Curiosity: The Grace Hopper Story is an upcoming documentary film. https://www.imdb.com/title/tt3545258/
 
