--- a/news.html
+++ b/news.html
@@ -10,8 +10,8 @@
 <body>
     <article>
         <section>
-            <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, former Persident Barack Obama awarded her the Presidential Medal of Freedom.</p>
-            
+            <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
+            <p>A documentary film has, according to IMDB, been in development since 2014, called <em>Born with Curiosity: The Grace Hopper Story</em>.</p>
 
         </section>
     </article>
