--- a/news.html
+++ b/news.html
@@ -12,10 +12,10 @@
         <section>
             <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
             <p>A documentary film has, according to IMDB, been in development since 2014, called <em>Born with Curiosity: The Grace Hopper Story</em>.</p>
-
+            <p>The Grace Hopper Celebration is in its 19th year now, </p>
         </section>
     </article>
-Grace Hopper Celebration 2019 https://ghc.anitab.org/
+<!-- Grace Hopper Celebration 2019 https://ghc.anitab.org/
 Born with Curiosity: The Grace Hopper Story is an upcoming documentary film. https://www.imdb.com/title/tt3545258/
 
 
@@ -24,6 +24,6 @@ Hopper College at Yale University
 Grace Hopper Academy NYC immersive programming
 Naval Academy building Hopper Hall "This is the first building at any service academy named after a woman"
 On November 22, 2016 Hopper was posthumously awarded a Presidential Medal of Freedom for her accomplishments in the field of computer science.
-
+-->
 </body>
 </html>
