finally completed that paragraph

--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
         <section>
             <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
             <p>A documentary film has, according to IMDB, been in development since 2014, called <em>Born with Curiosity: The Grace Hopper Story</em>.</p>
-            <p>The Grace Hopper Celebration is in its 19th year now, </p>
+            <p>The Grace Hopper Celebration is in its 19th year now. It is a celebration of women technologists by women technologists, and features speakers, awards, and other programming related to women in technological fields.</p>
         </section>
     </article>
 <!-- Grace Hopper Celebration 2019 https://ghc.anitab.org/
