playing with a nav bar

--- a/news.html
+++ b/news.html
@@ -8,6 +8,14 @@
     <title>Grace Hopper</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="personal.html">About</a></li>
+        </ul>
+    </nav>
     <article>
         <section>
             <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
