--- a/news.html
+++ b/news.html
@@ -4,34 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <title>Grace Hopper</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="personal.html">About</a></li>
-        </ul>
+    <nav><!-- here is the nav bar -->
+<!-- insert Janet's code here -->
     </nav>
-    <article>
+    <article><!-- grace in the news; should this be paragraph form or list form? -->
         <section>
             <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
+            <p>The Naval Academy in Annapolis, MD, broke ground in 2016 for Hopper Hall, a cybersecurity building designed to accomodate a cyber operations major. It is the first building at an American service school named for a woman.<a href="https://www.capitalgazette.com/news/naval_academy/ph-ac-cn-hopper-hall-breaking-ground-1022-20161022-story.html">[1]</a></p>
             <p>A documentary film has, according to IMDB, been in development since 2014, called <em>Born with Curiosity: The Grace Hopper Story</em>.</p>
-            <p>The Grace Hopper Celebration is in its 19th year now. It is a celebration of women technologists by women technologists, and features speakers, awards, and other programming related to women in technological fields.</p>
+            <p><a href="https://ghc.anitab.org/">The Grace Hopper Celebration</a> is in its 19th year now. It is a celebration of women technologists by women technologists, and features speakers, awards, and other programming related to women in technological fields.</p>
         </section>
     </article>
-<!-- Grace Hopper Celebration 2019 https://ghc.anitab.org/
-Born with Curiosity: The Grace Hopper Story is an upcoming documentary film. https://www.imdb.com/title/tt3545258/
+<!-- Born with Curiosity: The Grace Hopper Story is an upcoming documentary film. https://www.imdb.com/title/tt3545258/
 
-
-recent legacy honors
-Hopper College at Yale University
-Grace Hopper Academy NYC immersive programming
 Naval Academy building Hopper Hall "This is the first building at any service academy named after a woman"
-On November 22, 2016 Hopper was posthumously awarded a Presidential Medal of Freedom for her accomplishments in the field of computer science.
 -->
 </body>
 </html>
