switched paragraphs to list format

--- a/news.html
+++ b/news.html
@@ -13,10 +13,15 @@
     </nav>
     <article><!-- grace in the news; should this be paragraph form or list form? -->
         <section>
-            <p>Even though Grace Hopper died in 1992, her name and image still fill computing news. In the last two years alone, an immersive programming school named Grace Hopper Academy opened in New York City in January 2016; former Persident Barack Obama awarded her the Presidential Medal of Freedom in November 2016; and Calhoun College at Yale University was renamed Hopper College in her honor in July 2017.</p>
-            <p>The Naval Academy in Annapolis, MD, broke ground in 2016 for Hopper Hall, a cybersecurity building designed to accomodate a cyber operations major. It is the first building at an American service school named for a woman.<a href="https://www.capitalgazette.com/news/naval_academy/ph-ac-cn-hopper-hall-breaking-ground-1022-20161022-story.html">[1]</a></p>
-            <p>A documentary film has, according to IMDB, been in development since 2014, called <em>Born with Curiosity: The Grace Hopper Story</em>.</p>
-            <p><a href="https://ghc.anitab.org/">The Grace Hopper Celebration</a> is in its 19th year now. It is a celebration of women technologists by women technologists, and features speakers, awards, and other programming related to women in technological fields.</p>
+            <ul>
+                <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
+                <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
+                <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
+                <ul><li>(the first building at an American service school named for a woman)</li></ul>
+                <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
+                <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
+                <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+            </ul>
         </section>
     </article>
 </body>
