nav bar basics done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <nav>
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.html">News Feed</a></li>
+            <li><a href="career.html">Career</a></li>
+            <li><a href="personal.html">About</a></li>
+        </ul>
+    </nav>
+
+    //s should be the first information displayed when the report is opened. It should contain the following
+    components.
+
+    //Known collaborators with the artist.
+    // A portrait of the artist. This component should have a photo and name.
+    // List of known aliases.
+    // Country of residence.
+
 </body>
+
 </html>
