fixed css link; added nav bar code

--- a/news.html
+++ b/news.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <title>Grace Hopper</title>
 </head>
 <body>
-    <nav><!-- here is the nav bar -->
-<!-- insert Janet's code here -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.html">News Feed</a></li>
+            <li><a href="career.html">Career</a></li>
+            <li><a href="personal.html">About</a></li>
+        </ul>
     </nav>
     <article><!-- grace in the news; should this be paragraph form or list form? -->
         <section>
