--- a/personal.html
+++ b/personal.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,5 +18,11 @@
             <li><a href="personal.html">About</a></li>
         </ul>
     </nav>
+    <h1>This is Kelly's page.</h1>
+    <article>
+        <section>
+            About Grace
+        </section>
+    </article>
 </body>
 </html>
