--- a/news.html
+++ b/news.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Grace Hopper</title>
 </head>
 <body>
-    <nav>
+    <nav><!-- nav bar thx janet -->
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="news.html">News Feed</a></li>
@@ -16,7 +17,7 @@
             <li><a href="personal.html">About</a></li>
         </ul>
     </nav>
-    <article><!-- grace in the news; should this be paragraph form or list form? -->
+    <article><!-- grace in the news; only the most recent news included -->
         <section>
             <ul>
                 <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
