--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Grace Hopper</title>
 </head>
 
 <body>
 
     <nav>
-
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="news.html">News Feed</a></li>
@@ -29,6 +29,13 @@
     // List of known aliases.
     // Country of residence.
 
+
+    <footer>
+        <ul>
+            <li><img src="wikipedia-svgrepo-com.svg" height="50px" /></li>
+
+        </ul>
+    </footer>
 </body>
 
 </html>
