--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
     <footer>
         <ul>
-            <li><img src="wikipedia-svgrepo-com.svg" height="50px" /></li>
-
+            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+            <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
         </ul>
     </footer>
 </body>
