added a container to style text on the page and made css changes for color scheme

--- a/career.html
+++ b/career.html
@@ -6,18 +6,39 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Career</title>
 </head>
   <body>
     <nav>
      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News Feed</a></li>
-        <li><a href="career.html">Career</a></li>
-        <li><a href="personal.html">About</a></li>
+        <li><a href="index.html" style="text-decoration: none">Home</a></li>
+        <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
+        <li><a href="career.html" style="text-decoration: none">Career</a></li>
+        <li><a href="personal.html" style="text-decoration: none">About</a></li>
       </ul>
    </nav>
-  <h1>This is justinas page!!</h1>
+   <h1>Grace Hopper's Career</h1>
+ <div class="infoContainer">
+      Hopper had tried to enlist in the Navy early in World War II. She was rejected for
+      multiple reasons. At age 34, she was too old to enlist, and her weight to height ratio
+      was too low. She was also denied on the basis that her job as a mathematician and
+      mathematics professor at Vassar College was valuable to the war effort.[18] During
+      the war in 1943, Hopper obtained a leave of absence from Vassar and was sworn into
+      the United States Navy Reserve; she was one of many women who volunteered to serve
+      in the WAVES. She had to get an exemption to enlist; she was 15 pounds (6.8 kg)
+      below the Navy minimum weight of 120 pounds (54 kg). She reported in December and
+      trained at the Naval Reserve Midshipmen's School at Smith College in Northampton,
+      Massachusetts. Hopper graduated first in her class in 1944, and was assigned to
+      the Bureau of Ships Computation Project at Harvard University as a lieutenant,
+      junior grade. She served on the Mark I computer programming staff headed by
+      Howard H. Aiken. Hopper and Aiken co-authored three papers on the Mark I, also
+      known as the Automatic Sequence Controlled Calculator. Hopper's request to transfer
+      to the regular Navy at the end of the war was declined due to her advanced age of 38.
+      She continued to serve in the Navy Reserve. Hopper remained at the Harvard Computation
+      Lab until 1949, turning down a full professorship at Vassar in favor of working as a
+      research fellow under a Navy contract at Harvard.[19]
+ </div>
 
   </body>
 <script src="index.html"></script>
