--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
 
     <nav>
-
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="news.html">News Feed</a></li>
-            <li><a href="career.html">Career</a></li>
-            <li><a href="personal.html">About</a></li>
+            <li><a href="index.html" style="text-decoration: none">Home</a></li>
+            <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
+            <li><a href="career.html" style="text-decoration: none">Career</a></li>
+            <li><a href="personal.html" style="text-decoration: none">About</a></li>
         </ul>
     </nav>
+      <h1>Grace Hopper</h1>
 
-    //s should be the first information displayed when the report is opened. It should contain the following
-    components.
+        <div class="infoContainer">
+            //s should be the first information displayed when the report is opened. It should contain the following
+            components.
 
-    //Known collaborators with the artist.
-    // A portrait of the artist. This component should have a photo and name.
-    // List of known aliases.
-    // Country of residence.
-
+            //Known collaborators with the artist.
+            // A portrait of the artist. This component should have a photo and name.
+            // List of known aliases.
+            // Country of residence.
+        </div>
 </body>
 
 </html>
