--- a/news.html
+++ b/news.html
@@ -17,19 +17,17 @@
             <li><a href="personal.html">About</a></li>
         </ul>
     </nav>
-    <article><!-- grace in the news; only the most recent news included -->
-        <section>
-            <ul>
-                <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
-                <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
-                <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
+    <div class="infoContainer"><!-- grace in the news; only the most recent news included -->
+        <ul>
+            <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
+            <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
+            <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
                 <ul><li>(the first building at an American service school named for a woman)</li></ul>
-                <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
-                <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
-                <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
-            </ul>
-        </section>
-    </article>
+            <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
+            <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
+            <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+        </ul>
+    </div>
     <footer>
         <ul>
             <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
