--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
             <li><a href="personal.html">About</a></li>
         </ul>
     </nav>
-
+    <h1>News About Grace Hopper's Legacy</h1>
     <div class="infoContainer"><!-- grace in the news; only the most recent news included -->
         <ul>
             <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
