--- a/personal.html
+++ b/personal.html
@@ -18,11 +18,18 @@
             <li><a href="personal.html">About</a></li>
         </ul>
     </nav>
-    <h1>This is Kelly's page.</h1>
-    <article>
-        <section>
-            About Grace
-        </section>
-    </article>
+    <h1>About Grace Hopper</h1>
+
+    <div class="infoContainer">
+        This is where I will add the content
+    </div>
+
+<footer>
+    <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+        <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+        <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+    </ul>
+</footer>
 </body>
 </html>
