fixed footer to the bottom of the page

--- a/career.html
+++ b/career.html
@@ -40,7 +40,12 @@
       research fellow under a Navy contract at Harvard.[19]
  </div>
 
-  </body>
-<script src="index.html"></script>
-
+ <footer>
+   <ul>
+     <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+     <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+     <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+    </ul>
+  </footer>
+</body>
 </html>
