added v basic summary, image, quote

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
       <h1>Grace Hopper</h1>
 
         <div class="infoContainer">
-            //s should be the first information displayed when the report is opened. It should contain the following
-            components.
-
-            //Known collaborators with the artist.
-            // A portrait of the artist. This component should have a photo and name.
-            // List of known aliases.
-            // Country of residence.
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg/220px-Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg" />
+            <h3>Grace Brewster Murray Hopper</h3>
+            <p>born December 9, 1906; died January 1, 1992</p>
+            <p>also called "Amazing Grace", "Grandma COBOL"</p>
+            <p>retired from the Navy at the rank of rear admiral</p>
+            <p>worked with: Howard H Aiken</p>
+            <br style="clear:all" />
+            <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to take chances."</em></p>
         </div>
 
     <footer>
