proper targeting of links across all pages

--- a/career.html
+++ b/career.html
@@ -12,10 +12,10 @@
   <body>
     <nav>
      <ul>
-        <li><a href="index.html" style="text-decoration: none">Home</a></li>
-        <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
-        <li><a href="career.html" style="text-decoration: none">Career</a></li>
-        <li><a href="personal.html" style="text-decoration: none">About</a></li>
+        <li><a href="index.html" target="_new">Home</a></li>
+        <li><a href="news.html"  target="_new">News Feed</a></li>
+        <li><a href="career.html"  target="_new">Career</a></li>
+        <li><a href="personal.html"  target="_new">About</a></li>
       </ul>
    </nav>
    <h1>Grace Hopper's Career</h1>
@@ -39,8 +39,14 @@
       Lab until 1949, turning down a full professorship at Vassar in favor of working as a
       research fellow under a Navy contract at Harvard.[19]
  </div>
-
+ <footer>
+    <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+        <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+        <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+    </ul>
+</footer>
   </body>
-<script src="index.html"></script>
+
 
 </html>
