--- a/news.html
+++ b/news.html
@@ -10,15 +10,15 @@
     <title>Grace Hopper</title>
 </head>
 <body>
-    <nav><!-- nav bar thx janet -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="news.html">News Feed</a></li>
-            <li><a href="career.html">Career</a></li>
-            <li><a href="personal.html">About</a></li>
-        </ul>
-    </nav>
-    <h1>News About Grace Hopper's Legacy</h1>
+        <nav>
+                <ul>
+                   <li><a href="index.html" target="_new">Home</a></li>
+                   <li><a href="news.html"  target="_new">News Feed</a></li>
+                   <li><a href="career.html"  target="_new">Career</a></li>
+                   <li><a href="personal.html"  target="_new">About</a></li>
+                 </ul>
+              </nav>
+               <h1>News About Grace Hopper's Legacy</h1>
     <div class="infoContainer"><!-- grace in the news; only the most recent news included -->
         <ul>
             <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
@@ -31,11 +31,11 @@
         </ul>
     </div>
     <footer>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-            <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
-        </ul>
-    </footer>
-</body>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+            </ul>
+        </footer>
+    </body>
 </html>
