--- a/personal.html
+++ b/personal.html
@@ -10,27 +10,26 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="news.html">News Feed</a></li>
-            <li><a href="career.html">Career</a></li>
-            <li><a href="personal.html">About</a></li>
-        </ul>
-    </nav>
-    <h1>About Grace Hopper</h1>
+        <nav>
+                <ul>
+                   <li><a href="index.html" target="_new">Home</a></li>
+                   <li><a href="news.html"  target="_new">News Feed</a></li>
+                   <li><a href="career.html"  target="_new">Career</a></li>
+                   <li><a href="personal.html"  target="_new">About</a></li>
+                 </ul>
+              </nav>
+               <h1>About Grace Hopper</h1>
 
     <div class="infoContainer">
         This is where I will add the content
     </div>
 
-<footer>
-    <ul>
-        <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-        <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-        <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
-    </ul>
-</footer>
-</body>
+    <footer>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+            </ul>
+        </footer>
+    </body>
 </html>
