index shaping and footer fixing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <br style="clear:all" />
             <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to take chances."</em></p>
         </div>
+        <div>
+            <h2>Country of Residence</h2>
+            <p>United States</p>
+        </div>
 
     <footer>
         <ul>
