adding text to my page

--- a/career.html
+++ b/career.html
@@ -20,24 +20,39 @@
    </nav>
    <h1>Grace Hopper's Career</h1>
  <div class="infoContainer">
-      Hopper had tried to enlist in the Navy early in World War II. She was rejected for
-      multiple reasons. At age 34, she was too old to enlist, and her weight to height ratio
-      was too low. She was also denied on the basis that her job as a mathematician and
-      mathematics professor at Vassar College was valuable to the war effort.[18] During
-      the war in 1943, Hopper obtained a leave of absence from Vassar and was sworn into
-      the United States Navy Reserve; she was one of many women who volunteered to serve
-      in the WAVES. She had to get an exemption to enlist; she was 15 pounds (6.8 kg)
-      below the Navy minimum weight of 120 pounds (54 kg). She reported in December and
-      trained at the Naval Reserve Midshipmen's School at Smith College in Northampton,
-      Massachusetts. Hopper graduated first in her class in 1944, and was assigned to
-      the Bureau of Ships Computation Project at Harvard University as a lieutenant,
-      junior grade. She served on the Mark I computer programming staff headed by
-      Howard H. Aiken. Hopper and Aiken co-authored three papers on the Mark I, also
-      known as the Automatic Sequence Controlled Calculator. Hopper's request to transfer
-      to the regular Navy at the end of the war was declined due to her advanced age of 38.
-      She continued to serve in the Navy Reserve. Hopper remained at the Harvard Computation
-      Lab until 1949, turning down a full professorship at Vassar in favor of working as a
-      research fellow under a Navy contract at Harvard.[19]
+      Grace Hopper was a pioneer for computer programming and invented the term "computer bug ".
+      She helped develop the first compiler that was a precursor to the widely used COBOL
+      language and became a rear admiral in the U.S. Navy.(COBOL is a compiled English-like computer
+      programming language designed for business use.)
+
+      Skills and Talents:
+      Yale awarded her a master’s degree in mathematics
+
+      Published Works:
+
+
+      Places Lived:
+      New York City, New York
+      Poughkeepsie, New York
+      New Haven, Connecticut
+      Northampton, Massachusetts
+
+      Collaborators:
+
+
+      Awards:
+      Defense Distinguished Service Medal
+      Legion of Merit
+      Meritorious Service Medal
+      American Campaign Medal
+      World War II Victory Medal
+      National Defense Service Medal
+      Armed Forces Reserve Medal
+      Naval Reserve Medal
+      She reached the rank of Rear Admiral in the US Navy with a ship named after her
+      In 2016, Hopper was posthumously honored with the Presidential Medal of Freedom by Barack Obama.
+      The University of Missouri has honored Hopper with a computer museum on their campus, dubbed “Grace’s Place.”
+
  </div>
 
  <footer>
