--- a/index.html
+++ b/index.html
@@ -15,34 +15,41 @@
 
     <nav>
         <ul>
-            <li><a href="index.html"  target="_new">Home</a></li>
-            <li><a href="news.html"  target="_new">News Feed</a></li>
-            <li><a href="career.html"  target="_new">Career</a></li>
-            <li><a href="personal.html"  target="_new">About</a></li>
+            <li><a href="index.html" target="_new">Home</a></li>
+            <li><a href="news.html" target="_new">News Feed</a></li>
+            <li><a href="career.html" target="_new">Career</a></li>
+            <li><a href="personal.html" target="_new">About</a></li>
         </ul>
     </nav>
-      <h1>Grace Hopper</h1>
+    <h1>Grace Hopper</h1>
 
-        <div class="infoContainer">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg/220px-Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg" />
-            <h3>Grace Brewster Murray Hopper</h3>
-            <p>born December 9, 1906; died January 1, 1992</p>
-            <p>also called "Amazing Grace", "Grandma COBOL"</p>
-            <p>retired from the Navy at the rank of rear admiral</p>
-            <p>worked with: Howard H Aiken</p>
-            <br style="clear:all" />
-            <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to take chances."</em></p>
-        </div>
+    <div class="infoContainer">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg/220px-Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg" />
         <div>
-            <h2>Country of Residence</h2>
-            <p>United States</p>
+            <h2>Aliases</h2>
+            <ul>
+                <li>Grandma Cobol</li>
+                <li>Amazing Grace</li>
+            </ul>
+        </div>
+        <p>born December 9, 1906; died January 1, 1992</p>
+        <p>retired from the Navy at the rank of rear admiral</p>
+        <p>worked with: Howard H Aiken</p>
+        <br style="clear:all" />
+        <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to
+                take chances."</em></p>
+        <div>
+            <p>Country of Residence: United States</p>
         </div>
 
+    </div>
     <footer>
         <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg"
+                        height="50px" /></a></li>
             <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"
+                    target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
         </ul>
     </footer>
 </body>
