--- a/career.html
+++ b/career.html
@@ -12,10 +12,10 @@
   <body>
     <nav>
      <ul>
-        <li><a href="index.html" target="_new">Home</a></li>
-        <li><a href="news.html"  target="_new">News Feed</a></li>
-        <li><a href="career.html"  target="_new">Career</a></li>
-        <li><a href="personal.html"  target="_new">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="news.html">News Feed</a></li>
+        <li><a href="career.html"">Career</a></li>
+        <li><a href="personal.html">About</a></li>
       </ul>
    </nav>
    <h1>Grace Hopper's Career</h1>
