--- a/career.html
+++ b/career.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,55 +10,60 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Career</title>
 </head>
-  <body>
-    <nav>
-     <ul>
-        <li><a href="index.html" style="text-decoration: none">Home</a></li>
-        <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
-        <li><a href="career.html" style="text-decoration: none">Career</a></li>
-        <li><a href="personal.html" style="text-decoration: none">About</a></li>
-      </ul>
-   </nav>
-   <h1>Grace Hopper's Career</h1>
- <div class="infoContainer">
-      Grace Hopper was a pioneer for computer programming and invented the term "computer bug ".
-      She helped develop the first compiler that was a precursor to the widely used COBOL
-      language and became a rear admiral in the U.S. Navy.(COBOL is a compiled English-like computer
-      programming language designed for business use.)
 
-      Skills and Talents:
-      Yale awarded her a master’s degree in mathematics
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html" style="text-decoration: none">Home</a></li>
+      <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
+      <li><a href="career.html" style="text-decoration: none">Career</a></li>
+      <li><a href="personal.html" style="text-decoration: none">About</a></li>
+    </ul>
+  </nav>
+  <h1>Grace Hopper's Career</h1>
+  <div class="infoContainer">
+    Grace Hopper was a pioneer for computer programming and invented the term "computer bug ".
+    She helped develop the first compiler that was a precursor to the widely used COBOL
+    language and became a rear admiral in the U.S. Navy.(COBOL is a compiled English-like computer
+    programming language designed for business use.)
 
+    <ul>
+    <h4>Skills and Talents:</h4>
+      <li>Yale awarded her a master’s degree in mathematics</li>
+    </ul>
 
-      Places Lived:
-      New York City, New York
-      Poughkeepsie, New York
-      New Haven, Connecticut
-      Northampton, Massachusetts
+    <ul>
+      <h4>Places Lived:</h4>
+      <li>New York City, New York</li>
+      <li> Poughkeepsie, New York</li>
+      <li> New Haven, Connecticut</li>
+      <li>Northampton, Massachusetts</li>
+    </ul>
 
-      Collaborators:
+    <ul>
+      <h4>Awards:</h4>
+      <li>Defense Distinguished Service Medal</li>
+      <li>Legion of Merit</li>
+      <li>Meritorious Service Medal</li>
+      <li>American Campaign Medal</li>
+      <li>World War II Victory Medal</li>
+      <li>National Defense Service Medal</li>
+      <li> Armed Forces Reserve Medal</li>
+      <li>Naval Reserve Medal</li>
+      <li> She reached the rank of Rear Admiral in the US Navy with a ship named after her</li>
+      <li> In 2016, Hopper was posthumously honored with the Presidential Medal of Freedom by Barack Obama.</li>
+      <li>The University of Missouri has honored Hopper with a computer museum on their campus, dubbed “Grace’s Place.”</li>
+    </ul>
+  </div>
 
-
-      Awards:
-      Defense Distinguished Service Medal
-      Legion of Merit
-      Meritorious Service Medal
-      American Campaign Medal
-      World War II Victory Medal
-      National Defense Service Medal
-      Armed Forces Reserve Medal
-      Naval Reserve Medal
-      She reached the rank of Rear Admiral in the US Navy with a ship named after her
-      In 2016, Hopper was posthumously honored with the Presidential Medal of Freedom by Barack Obama.
-      The University of Missouri has honored Hopper with a computer museum on their campus, dubbed “Grace’s Place.”
- </div>
-
- <footer>
-   <ul>
-     <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-     <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-     <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+  <footer>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+      <li><a href="http://www.twitter.com/ghc"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+      <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"><img
+            src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
     </ul>
   </footer>
 </body>
+
 </html>
