correcting some spelling errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                    <li><a href="index.html">Home</a></li>
                    <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html"">Career</a></li>
+                   <li><a href="career.html">Career</a></li>
                    <li><a href="personal.html">About</a></li>
                  </ul>
               </nav>
