--- a/career.html
+++ b/career.html
@@ -14,10 +14,10 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html" style="text-decoration: none">Home</a></li>
-      <li><a href="news.html" style="text-decoration: none">News Feed</a></li>
-      <li><a href="career.html" style="text-decoration: none">Career</a></li>
-      <li><a href="personal.html" style="text-decoration: none">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News Feed</a></li>
+      <li><a href="career.html">Career</a></li>
+      <li><a href="personal.html">About</a></li>
     </ul>
   </nav>
   <h1>Grace Hopper's Career</h1>
