--- a/personal.html
+++ b/personal.html
@@ -14,7 +14,7 @@
                 <ul>
                    <li><a href="index.html">Home</a></li>
                    <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html"">Career</a></li>
+                   <li><a href="career.html">Career</a></li>
                    <li><a href="personal.html">About</a></li>
                  </ul>
               </nav>
