added early days

--- a/personal.html
+++ b/personal.html
@@ -21,7 +21,12 @@
                <h1>About Grace Hopper</h1>
 
     <div class="infoContainer">
-        This is where I will add the content
+        <h2>Early Days</h2>
+        <p>Grace Brewster Murray was born on December 9, 1906 in New York City, USA. Hopper was her married surname.</p>
+        <p>Her father was Walter Fletcher Murray, an insurance executive; and her mother was the mathematically talented Mary Campbell Van Horne. The couple had three children; Grace Brewster Murray, Dr. Roger Franklin Murray, and Mary Murray. Grace was the eldest.</p>
+        <p>Grace grew up in an academic atmosphere – her parents made sure she had access to all the books she wanted, and they did everything they possibly could to support her curious nature. 
+            Grace’s father raised his daughters and his son to value education, self-reliance, and hard work; and he urged them to always pursue their dreams.
+            </p>
     </div>
 
     <footer>
