--- a/template.html
+++ b/template.html
@@ -3,23 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">\
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>Grace Hopper</title>
 </head>
 <body>
-    <nav>
-        <!-- navigation goes here -- stretch across the top of the page, aligned left, spacing -->
-    </nav>
-<article>
-<!-- content goes here -->
-
-</article>
-
-<footer>
-<!-- social media links go here -- fix to bottom of page / content -->
-
-</footer>
+    <div id="main">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News Feed</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>Grace Hopper</h1>
+        <article>
+            <!-- content goes here -->
+            content ipsum
+        </article>
+        <footer>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px"/></a></li>
+                <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
 </html>
