added medalling template

--- a/index.html
+++ b/index.html
@@ -1,57 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <title>Grace Hopper</title>
 </head>
-
 <body>
-
+    <div id="main">
         <nav>
-                <ul>
-                   <li><a href="index.html">Home</a></li>
-                   <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html">Career</a></li>
-                   <li><a href="personal.html">About</a></li>
-                 </ul>
-              </nav>
-                 <h1>Grace Hopper</h1>
-
-    <div class="infoContainer">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg/220px-Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg" />
-        <div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News Feed</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>Grace Hopper</h1>
+        <article>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg/220px-Commodore_Grace_M._Hopper%2C_USN_%28covered%29.jpg" />
             <h2>Aliases</h2>
             <ul>
                 <li>Grandma Cobol</li>
                 <li>Amazing Grace</li>
             </ul>
-        </div>
-        <p>born December 9, 1906; died January 1, 1992</p>
-        <p>retired from the Navy at the rank of rear admiral</p>
-        <p>worked with: Howard H Aiken</p>
-        <br style="clear:all" />
-        <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to
-                take chances."</em></p>
-        <div>
+            <p>born December 9, 1906; died January 1, 1992</p>
+            <p>retired from the Navy at the rank of rear admiral</p>
+            <p>worked with: Howard H Aiken</p>
             <p>Country of Residence: United States</p>
-        </div>
-
+            <br style="clear:all" />
+            <p><em>"I keep track of [young people] as they get older and I stir 'em up at intervals so they don't forget to take chances."</em></p>
+        </article>
+        <footer>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px"/></a></li>
+                <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+            </ul>
+        </footer>
     </div>
-    <footer>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg"
-                        height="50px" /></a></li>
-            <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"
-                    target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
-        </ul>
-    </footer>
 </body>
-
 </html>
