--- a/news.html
+++ b/news.html
@@ -5,37 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>Grace Hopper</title>
 </head>
 <body>
+    <div id="main">
         <nav>
-                <ul>
-                   <li><a href="index.html">Home</a></li>
-                   <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html">Career</a></li>
-                   <li><a href="personal.html">About</a></li>
-                 </ul>
-              </nav>
-                          <h1>News About Grace Hopper's Legacy</h1>
-    <div class="infoContainer"><!-- grace in the news; only the most recent news included -->
-        <ul>
-            <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
-            <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
-            <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
-                <ul><li>(the first building at an American service school named for a woman)</li></ul>
-            <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
-            <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
-            <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
-        </ul>
-    </div>
-    <footer>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News Feed</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>Grace Hopper's Legacy</h1>
+        <article>
+            <ul>
+                <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
+                <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
+                <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
+                    <ul><li>(the first building at an American service school named for a woman)</li></ul>
+                <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
+                <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
+                <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+            </ul>
+        </article>
+        <footer>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px"/></a></li>
                 <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
             </ul>
         </footer>
-    </body>
+    </div>
+</body>
 </html>
