--- a/personal.html
+++ b/personal.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <title>Grace Hopper</title>
 </head>
 <body>
+    <div id="main">
         <nav>
-                <ul>
-                   <li><a href="index.html">Home</a></li>
-                   <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html">Career</a></li>
-                   <li><a href="personal.html">About</a></li>
-                 </ul>
-              </nav>
-                          <h1>About Grace Hopper</h1>
-
-    <div class="infoContainer">
-        This is where I will add the content
-    </div>
-
-    <footer>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News Feed</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>About Grace Hopper</h1>
+        <article>
+            <!-- content goes here -->
+            This is where I will add the content
+        </article>
+        <footer>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px"/></a></li>
                 <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
             </ul>
         </footer>
-    </body>
+    </div>
+</body>
 </html>
