--- a/career.html
+++ b/career.html
@@ -39,36 +39,106 @@
               <h4>Awards:</h4>
               <li>Defense Distinguished Service Medal
                 <span class="medals">
-                <span style="display:inline-block; margin: -5px; width:30px; background: lightblue;">&nbsp;</span>
-                <span style="display:inline-block; margin: -5px; width:25px; background: gold;">&nbsp;</span>
-                <span style="display:inline-block; margin: -5px; width:10px; background: red;">&nbsp;</span>
-                <span style="display:inline-block; margin: -5px; width:25px; background: gold;">&nbsp;</span>
-                <span style="display:inline-block; margin: -5px; width:30px; background: lightblue;">&nbsp;</span>
+                <span style="width:30px; background: lightblue;">&nbsp;</span>
+                <span style="width:25px; background: gold;">&nbsp;</span>
+                <span style="width:15px; background: red;">&nbsp;</span>
+                <span style="width:25px; background: gold;">&nbsp;</span>
+                <span style="width:30px; background: lightblue;">&nbsp;</span>
               </span>
               </li>
               <li>Legion of Merit
-                  <span class="medals"></span>
+                  <span class="medals">
+                      <span style="width:5px; background: lightgrey;">&nbsp;</span>
+                      <span style="width:115px; background: darkmagenta;">&nbsp;</span>
+                      <span style="width:5px; background: lightgray;">&nbsp;</span>      
+                  </span>
               </li>
               <li>Meritorious Service Medal
-                  <span class="medals"></span>
+                  <span class="medals">
+                      <span style="width:10px; background: darkmagenta;">&nbsp;</span>
+                      <span style="width:20px; background: lightgrey;">&nbsp;</span>
+                      <span style="width:75px; background: darkmagenta;">&nbsp;</span>
+                      <span style="width:20px; background: lightgray;">&nbsp;</span>
+                      <span style="width:10px; background: darkmagenta;">&nbsp;</span>
+                  </span>
               </li>
               <li>American Campaign Medal
-                  <span class="medals"></span>
+                  <span class="medals">
+                      <span style="width:20px; background: cornflowerblue;">&nbsp;</span>
+                      <span style="width:5px; background: white;">&nbsp;</span>
+                      <span style="width:6px; background: black;">&nbsp;</span>
+                      <span style="width:6px; background: crimson;">&nbsp;</span>
+                      <span style="width:6px; background: white;">&nbsp;</span>
+                      <span style="width:20px; background: cornflowerblue;">&nbsp;</span>
+                      <span style="width:4px; background: blue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:4px; background: crimson;">&nbsp;</span>
+                      <span style="width:20px; background: cornflowerblue;">&nbsp;</span>
+                      <span style="width:6px; background: white;">&nbsp;</span>
+                      <span style="width:6px; background: crimson;">&nbsp;</span>
+                      <span style="width:6px; background: black;">&nbsp;</span>
+                      <span style="width:6px; background: white;">&nbsp;</span>
+                      <span style="width:20px; background: cornflowerblue;">&nbsp;</span>
+                  </span>
               </li>
               <li>World War II Victory Medal
-                  <span class="medals"></span>
+                  <span class="medals">
+                      <span style="width:35px; background: linear-gradient(to right, purple, blue, green, yellow, orange, red, orange, yellow, green, blue, purple);">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:50px; background: crimson;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:35px; background: linear-gradient(to right, purple, blue, green, yellow, orange, red, orange, yellow, green, blue, purple);">&nbsp;</span>
+                  </span>
               </li>
-              <li>National Defense Service Medal
-                  <span class="medals"></span>
+              <li>National Defense Service Medal, with bronze star
+                  <span class="medals">
+                      <span style="width:35px; background: crimson;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:4px; background: blue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:4px; background: crimson;">&nbsp;</span>
+                      <span style="width:20px; background: yellow;">&nbsp;</span>
+                      <span style="width:4px; background: crimson;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:4px; background: blue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:35px; background: crimson;">&nbsp;</span>
+                    </span>
               </li>
-              <li>Armed Forces Reserve Medal
-                  <span class="medals"></span>
+              <li>Armed Forces Reserve Medal, 2 bronze hourglasses
+                  <span class="medals">
+                      <span style="width:8px; background: lightblue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                      <span style="width:30px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                      <span style="width:30px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                      <span style="width:4px; background: white;">&nbsp;</span>
+                      <span style="width:7px; background: lightblue;">&nbsp;</span>
+                  </span>
               </li>
               <li>Naval Reserve Medal
-                  <span class="medals"></span>
+                  <span class="medals">
+                      <span style="width:8px; background: navy;">&nbsp;</span>
+                      <span style="width:8px; background: gold;">&nbsp;</span>
+                      <span style="width:85px; background: crimson;">&nbsp;</span>
+                      <span style="width:8px; background: gold;">&nbsp;</span>
+                      <span style="width:8px; background: navy;">&nbsp;</span>
+                  </span>
               </li>
               <li>She reached the rank of Rear Admiral in the US Navy with a ship named after her.</li>
-              <li>In 2016, Hopper was posthumously honored with the Presidential Medal of Freedom by Barack Obama.</li>
+              <li>In 2016, Hopper was posthumously honored with the Presidential Medal of Freedom by Barack Obama.
+                  <span class="medals">
+                      <span style="width:12px; background: lightgray;">&nbsp;</span>
+                      <span style="width:85px; background: blue;">&nbsp;</span>
+                      <span style="width:12px; background: lightgray;">&nbsp;</span>
+                  </span>
+              </li>
               <li>The University of Missouri has honored Hopper with a computer museum on their campus, dubbed “Grace’s Place.”</li>
             </ul>
         </article>
