--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,32 +10,103 @@
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
+
 <body>
-        <nav>
-                <ul>
-                   <li><a href="index.html">Home</a></li>
-                   <li><a href="news.html">News Feed</a></li>
-                   <li><a href="career.html">Career</a></li>
-                   <li><a href="personal.html">About</a></li>
-                 </ul>
-              </nav>
-                          <h1>About Grace Hopper</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="news.html">News Feed</a></li>
+            <li><a href="career.html">Career</a></li>
+            <li><a href="personal.html">About</a></li>
+        </ul>
+    </nav>
+    <h1>About Grace Hopper</h1>
 
     <div class="infoContainer">
-        <h2>Early Days</h2>
-        <p>Grace Brewster Murray was born on December 9, 1906 in New York City, USA. Hopper was her married surname.</p>
-        <p>Her father was Walter Fletcher Murray, an insurance executive; and her mother was the mathematically talented Mary Campbell Van Horne. The couple had three children; Grace Brewster Murray, Dr. Roger Franklin Murray, and Mary Murray. Grace was the eldest.</p>
-        <p>Grace grew up in an academic atmosphere – her parents made sure she had access to all the books she wanted, and they did everything they possibly could to support her curious nature. 
-            Grace’s father raised his daughters and his son to value education, self-reliance, and hard work; and he urged them to always pursue their dreams.
-            </p>
+        <article>
+            <section>
+                <h2>Early Days</h2>
+                <p>Grace Brewster Murray was born on December 9, 1906 in New York City, USA. Hopper was her married
+                    surname.</p>
+                <p>Her father was Walter Fletcher Murray, an insurance executive; and her mother was the mathematically
+                    talented Mary Campbell Van Horne. The couple had three children; Grace Brewster Murray, Dr. Roger
+                    Franklin
+                    Murray, and Mary Murray. Grace was the eldest.</p>
+                <p><img src="images/grace1.jpg" class="personalImg" alt="Young Grace Murry" title="Young Grace Murry" />
+                    Grace grew up in an academic atmosphere – her parents made sure she had access to all the books she
+                    wanted,
+                    and they did everything they possibly could to support her curious nature.
+                    Grace’s father raised his daughters and his son to value education, self-reliance, and hard work;
+                    and
+                    he
+                    urged them to always pursue their dreams.
+                </p>
+                <p>Grace was educated privately at two conservative Presbyterian girls’ schools in New York: The Graham
+                    School
+                    and Miss Mary Schoonmaker’s School. At age 17, Grace had already
+                    decided to major in mathematics. Her professors noticed she was unusually skilled at explaining
+                    difficult
+                    concepts in math and physics to other students.</p>
+            </section>
+            <section>
+                <h2>Higher Education and Marrige</h2>
+                <p><img src="images/grace3.JPG" class="personalImg" alt="Grace Murry" title="Grace Murry" /> 1928, at
+                    age
+                    21, Grace graduated from a Vassar College, with a Bachelor of Arts degree in mathematics and
+                    physics. Two years later she received a master’s degree in mathematics from Yale. This was, also,
+                    the
+                    year
+                    she married Vincent Hopper, whom she divorced in in 1945. She did not marry again, but chose to
+                    keep
+                    the
+                    surname.</p>
+                <p>Grace accepted work as a mathematics assistant at Vassar College in 1931. While teaching, she went
+                    on to
+                    earn her PHD in 1934. She continued working at Vassar, where she was eventually promoted to
+                    associate
+                    professor.</p>
+            </section>
+            <section>
+                <h2>The Navy and Beyond</h2>
+                <p><img src="images/Grace4.jpg" class="personalImg" alt="Grace Hopper" title="Grace Hopper" />
+                    Following Japan’s
+                    attack on Pearl Harbor in November 1941, Grace attempted to join the military, but she was
+                    repeatedly denied. In 1943, however, her relentlessness paid off, and she was accepted into the Naval
+                    Reserve.
+                    This was the beginning of the 43 years she spent paving the way for computing as we know it today.
+                    In
+                    1986,
+                    she retired as a rear admiral. She was the oldest serving officer in service. She never fully
+                    retired
+                    from
+                    computing, though. She worked as an industry consultant to the end of her life.</p>
+                <p>Grace died in her sleep, age 85, of natural causes, on January 1, 1992 in Berkeley, California.</p>
+            </section>
+        </article>
+
+        <!--Authored by: Kelly Coles 1/9/1019
+            
+            CITATIONS:
+            "Grace Hopper." Famous Scientists. famousscientists.org. 8 Dec. 2016. Web. 1/9/2019 
+            <www.famousscientists.org/grace-murray-hopper/> 
+        
+            Article Title- Grace Hopper Biography
+            Author - Editors, TheFamousPeople.com
+            Website - TheFamousPeople.com
+            URL- https://www.thefamouspeople.com/profiles/rear-admiral-grace-murray-hopper-1536.php
+            Last Updated- September 20, 2017
+        -->
     </div>
 
     <footer>
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg" height="50px" /></a></li>
-                <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
-                <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing" target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
-            </ul>
-        </footer>
-    </body>
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_new"><img src="wikipedia-svgrepo-com.svg"
+                        height="50px" /></a></li>
+            <li><a href="http://www.twitter.com/ghc" target="_new"><img src="twitter-logo-svgrepo-com.svg" height="50px" /></a></li>
+            <li><a href="https://www.instagram.com/explore/locations/426711461/grace-hopper-celebration-of-women-in-computing"
+                    target="_new"><img src="instagram-logo-svgrepo-com.svg" height="50px" /></a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
