float margins and clear

--- a/personal.html
+++ b/personal.html
@@ -63,6 +63,7 @@
                     earn her PHD in 1934. She continued working at Vassar, where she was eventually promoted to
                     associate
                     professor.</p>
+                    <br style="clear:all" />
             </section>
             <section>
                 <h2>The Navy and Beyond</h2>
@@ -79,6 +80,7 @@
                     from
                     computing, though. She worked as an industry consultant to the end of her life.</p>
                 <p>Grace died in her sleep, age 85, of natural causes, on January 1, 1992 in Berkeley, California.</p>
+                
   </section>
         </article>
         <footer>
