Added the 1999 event

--- a/news.html
+++ b/news.html
@@ -27,7 +27,8 @@
                     <ul><li>(the first building at an American service school named for a woman)</li></ul>
                 <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
                 <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
-                <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+                <li>Yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+                <li>1999 -- Grace Hopper posthumously made President</li>
             </ul>
         </article>
         <footer>
