--- a/news.html
+++ b/news.html
@@ -22,12 +22,12 @@
         <article>
             <ul>
                 <li>2014 -- documentary called <em>Born with Curiosity: The Grace Hopper Story</em> begins development</li>
-                <li>January 2016 -- Grace Hopper Academy opens in New York City</li>
-                <li>October 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
+                <li>january 2016 -- Grace Hopper Academy opens in New York City</li>
+                <li>october 2016 -- Naval Academy breaks ground for Hopper Hall, a cybersecurity building</li>
                     <ul><li>(the first building at an American service school named for a woman)</li></ul>
-                <li>November 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
-                <li>July 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
-                <li>Yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
+                <li>november 2016 -- posthumously awarded the Presidential Medal of Freedom by former President Obama</li>
+                <li>july 2017 -- Calhoun College at Yale University renamed Hopper College.</li>
+                <li>yearly since 2000 -- the Grace Hopper Celebration, a celebration of women technologists</li>
                 <li>1999 -- Grace Hopper posthumously made President</li>
             </ul>
         </article>
